--- a/models/silver/tocaboca/_tocaboca.yml
+++ b/models/silver/tocaboca/_tocaboca.yml
@@ -136,7 +136,7 @@ models:
           - not_null
           - accepted_values:
               values:
-                - ["Creator Pack", "Playset", "Bundle"]
+                - ["creator pack", "playset", "bundle"]
       - name: product_subtype
         description: sub category of product type
         data_type: string
@@ -145,11 +145,31 @@ models:
           - accepted_values:
               values:
                 - [
-                    "Character Creator Upgrade",
-                    "Character Creator Style Pack",
-                    "Home Designer Template Pack",
-                    "Home Designer Furniture Pack",
-                    "Playset",
-                    "Bundle",
-                    "Home Designer Empty Building",
-                  ]
+                  "character creator upgrade",
+                  "character creator style pack",
+                  "home designer template pack",
+                  "home designer furniture pack",
+                  "playset",
+                  "bundle",
+                  "home designer empty building",
+                ]
+
+  - name: stg_exchange_rates
+    description: > 
+      contains exchange rates to usd, one row per day per currency code. Only
+      contains currencies that have actually been used in purchases
+    data_tests:
+      - dbt_utils.unique_combination_of_columns:
+          combination_of_columns:
+            - date
+            - currency_code
+    columns:
+      - name: date
+        description: date of the exchange rate 
+        data_type: date
+      - name: currency_code
+        description: the code for the currency, only ones relevant from app
+        data_type: string
+      - name: usd_per_currency
+        description: conversion rate from currency to usd
+        data_type: float
