--- a/models/silver/tocaboca/_tocaboca.yml
+++ b/models/silver/tocaboca/_tocaboca.yml
@@ -8,7 +8,7 @@ models:
         description: Date of the event as logged by GA4
         data_type: date
       - name: event_timestamp
-        description: Timestamp of the event as logged by GA4
+        description: Timestamp in UTC of the event as logged by GA4
         data_type: datetime
       - name: event_name
         description: Name of the GA4 event (e.g., app_started, purchase, level_up).
@@ -33,7 +33,7 @@ models:
           Google play store ('com.android.vending')
         data_type: string
       - name: ingested_at
-        description: Timestamp when the raw event was ingested into the bronze layer.
+        description: Timestamp in UTC when the raw event was ingested into the bronze layer.
         data_type: datetime
         data_tests:
           - not_null
