adds docs for dim device

--- a/models/gold/core/_core.yml
+++ b/models/gold/core/_core.yml
@@ -84,3 +84,25 @@ models:
       - name: has_subscription
         description: Whether the event was related to a subscription
         data_type: boolean
+
+  - name: dim_device
+    description: one row per device_id (synthetic), contains data on devices
+    columns:
+      - name: device_id
+        description: Unique, synthetic, identifier for the device combined with install_id
+        data_type: string
+        data_tests:
+          - not_null
+          - unique
+      - name: first_event_at_local
+        description: Timestamp in CET/CEST of the first event for the device
+        data_type: datetime
+      - name: last_event_at_local
+        description: Timestamp in CET/CEST of the last event for the device
+        data_type: datetime
+      - name: number_of_sessions
+        description: Number of sessions associated with the device
+        data_type: integer
+      - name: has_subscription
+        description: Whether the device has an active subscription. Not sure this is really what it is.
+        data_type: boolean
