adds bare bones test

--- a/models/gold/core/_core.yml
+++ b/models/gold/core/_core.yml
@@ -116,6 +116,9 @@ models:
       - name: device_key
         description: Unique, synthetic identifier for the device
         data_type: string
+        data_tests:
+          - not_null
+          - unique
       - name: price_usd
         description: Price of the in-app purchase converted to USD
         data_type: float
