--- a/models/gold/core/_core.yml
+++ b/models/gold/core/_core.yml
@@ -128,3 +128,16 @@ models:
       - name: quantity
         description: Quantity of the product purchased, seems to always be 1 in the data observed
         data_type: integer
+
+  - name: dim_products
+    description: Dimension table for products
+    columns:
+      - name: product_name
+        description: Name of the product, all in lowercase
+        data_type: string
+      - name: product_type
+        description: Higher level category of the product, all in lowercase
+        data_type: string
+      - name: product_subtype
+        description: Subtype of the product, all in lowercase
+        data_type: string
