adds gold folder to project file

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,3 +32,11 @@ models:
         {%- if target.name == "prod" -%} prod_silver
         {%- else -%} sandbox
         {%- endif -%}
+    gold:
+      +meta:
+        owner: "Data team"
+      +materialized: table
+      +catalog: |
+        {%- if target.name == "prod" -%} prod_gold
+        {%- else -%} sandbox
+        {%- endif -%}
